Updates and Revision Change to version 2.0.1
+ [PPG] Fix compile errors for Java 10
+ [SP] Update map images and CSS